tests/fixtures/invalid/pow_bool_none_set.py
# Cannot call pow() with Bool, None, Set[int]
x = pow(True, None, {1, 2, 3})
